NEW240965
[Cocoa] Content does not relayout when the "large text" font size changes
https://bugs.webkit.org/show_bug.cgi?id=240965
Summary [Cocoa] Content does not relayout when the "large text" font size changes
Myles C. Maxfield
Reported 2022-05-26 12:05:04 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-06-02 12:06:13 PDT
Myles C. Maxfield
Comment 2 2022-06-06 18:10:24 PDT
I have patches for this.
Note You need to log in before you can comment on or make changes to this bug.