[Cocoa] Content does not relayout when the "large text" font size changes https://bugs.webkit.org/show_bug.cgi?id=240965

Reviewed by Alan Bujtas.

Simply listen for the notification.

* Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSPI.h:
* Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::FontCache::platformInit):